solved blurry text question

--- a/assets/css/all.less
+++ b/assets/css/all.less
@@ -660,8 +660,6 @@ h6 {
     -webkit-transition-duration: 0.4s;
     position: relative;
     overflow: hidden;
-    perspective: 800px;
-    -webkit-perspective: 800px;
 
     .content {
       width: 100%;
